--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eyegotask",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A scalable event-driven microservice using Node.js, Express, and Kafka for real-time processing of user activity logs",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
