Restructure project and add consumer domain tests
Moved configuration files to the consumer directory, deleted unused files, and added Jest config for testing. Added and updated domain entity and value object tests for UserActivityLog and EventId, and removed the Version value object.

--- a/consumer/tsconfig.json
+++ b/consumer/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020"
+    ],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
@@ -10,12 +12,17 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true, // JSON files
-    "declaration": true, 
+    "declaration": true,
     "declarationMap": true, // Debugging
     "sourceMap": true,
     "experimentalDecorators": true, // بيفعلوا ميزة  Decorators (زي @Entity, @Controller).
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
