--- a/consumer/package.json
+++ b/consumer/package.json
@@ -20,6 +20,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^25.0.6",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
@@ -34,6 +35,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "mongoose": "^9.1.3",
     "uuid": "^9.0.1"
   }
 }
