--- a/consumer/package.json
+++ b/consumer/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "kafkajs": "^2.2.4",
     "mongoose": "^9.1.3",
     "uuid": "^9.0.1"
   }
