--- a/producer/package.json
+++ b/producer/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "kafkajs": "^2.2.4",
+    "uuid": "^9.0.1",
     "zod": "^4.3.5"
   },
   "scripts": {
@@ -10,6 +11,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.7",
+    "@types/uuid": "^9.0.7",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
